--- a/src/styles/abstracts/_colors.scss
+++ b/src/styles/abstracts/_colors.scss
@@ -4,9 +4,11 @@ $secondary: #9E3400;
 $light: #0AD1C1;
 $white: #f5f5f5;
 $black: #001e24;
-$grey: #f5f5f5;
-$dark: #001e24;
+$grey: #C4C4C4;
+$dark: #033834;
 $red: #D1261F;
 $purple: #520C49;
 $yellow: #9E8000;
-$green: #1F4921;
+$green: #00521D;
+$blue: #145285;
+$blue-light: #538AB8;
