--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,8 @@
+//Base
+@use './base/resets';
+@use './base/base';
+
 //Components
 @forward './components/header';
-//Screens
+@forward './components/cardSlider';
+@forward './components/calendar';
