--- a/src/styles/components/_cardSlider.scss
+++ b/src/styles/components/_cardSlider.scss
@@ -7,8 +7,7 @@
     height: 305px;
     position: relative;
     @include mix.create_flexbox;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin: 15px 0 15px 0;
 
     &-icon.left, &-icon.right {
         background: col.$black;
@@ -52,8 +51,7 @@
             background: col.$light;
             border-radius: 20px;
             display: inline-block;
-            margin-left: 5px;
-            margin-right: 5px;
+            margin: 5px 5px;
             box-shadow: 2px 2px 2px 2px rgb(0 0 0 / 12%);
             cursor: pointer;
 
