--- a/src/styles/components/_calendar.scss
+++ b/src/styles/components/_calendar.scss
@@ -2,12 +2,27 @@
 @use '../abstracts/mixins' as mix;
 
 .calendar{
-    width: 45%;
+    width: 30%;
     position: relative;
     @include mix.create_flexbox;
+    float:left;
+    margin-left: 100px;
 }
+.css-u0soqy-MuiPickerStaticWrapper-root{
+    box-shadow: 3px 2px 10px 5px #888888 !important;
+}
+
 .MuiDayPicker-monthContainer css-6t5f1e-MuiDayPicker-monthContainer {
-    width: 800px;
+    width: 900px;
+}
+.css-1eurbeq-MuiPickersToolbar-root-MuiDatePickerToolbar-root {
+    background-color: col.$main;
+    color: col.$white;
+    padding: 1rem;
+}
+
+.css-hlj6pa-MuiDialogActions-root{
+   display: none !important; 
 }
 
 //PrivatePickersSlideTransition-root
