--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,6 +7,7 @@
 @forward './components/cardSlider';
 @forward './components/calendar';
 @forward './components/doughnutChart';
+@forward './components/chatTextAI';
 
 .col1{
     width: 70%;
