--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,6 +8,8 @@
 @forward './components/calendar';
 @forward './components/doughnutChart';
 @forward './components/chatTextAI';
+@forward './components/login';
+@forward './components/register';
 
 .col1{
     width: 70%;
