1. Término de estilo en register/login 2. Avance de Quiz tipo Kahoot con rXjs

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -1,6 +1,6 @@
-@mixin create_flexbox($flex:none, $justify:center) {
+@mixin create_flexbox($flexDir:initial, $justify:center) {
     display: flex;
-    //flex-direction: $flex;
+    flex-direction: $flexDir;
     align-items: center;
     justify-content: $justify;
 }
