--- a/src/styles/components/_loginRegister.scss
+++ b/src/styles/components/_loginRegister.scss
@@ -1,7 +1,8 @@
 @use '../abstracts/mixins' as mix;
+@use '../abstracts/colors' as col;
 
 .login__container {
-  @include mix.create_flexbox($flex:column);
+  @include mix.create_flexbox($flexDir:column);
   height: 100vh;
 
   h1 {
@@ -9,10 +10,7 @@
   }
 
   form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    @include mix.create_flexbox($flexDir:column);
 
     label {
       margin-top: 1rem;
@@ -22,7 +20,7 @@
       margin-top: 0.5rem;
       padding: 0.5rem;
       border-radius: 0.25rem;
-      border: 1px solid #ccc;
+      border: 1px solid col.$grey;
     }
 
     button {
@@ -30,13 +28,13 @@
       padding: 0.5rem 1rem;
       border-radius: 0.25rem;
       border: none;
-      background-color: #0077ff;
-      color: #fff;
+      background-color: col.$blue;
+      color: col.$white;
       cursor: pointer;
       transition: background-color 0.2s ease;
 
       &:hover {
-        background-color: #0062cc;
+        background-color: col.$blue-light;
       }
     }
   }
