Añadido Barra de progreso

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -4,3 +4,8 @@
     align-items: center;
     justify-content: $justify;
 }
+
+@mixin set_dimensions($width: auto, $height: auto) {
+    width: $width;
+    height: $height;
+}
