--- a/src/styles/components/_doughnutChart.scss
+++ b/src/styles/components/_doughnutChart.scss
@@ -1,15 +1,21 @@
-@use '../abstracts/mixins' as mix;
+@use "../abstracts/mixins" as mix;
 
-.chartBox{
-    box-shadow: 3px 2px 10px 5px #888888;
-    width: 50%;
-    height: 440px;
-    float:left;
-    padding-left: 120px;
+.chartBox {
+  box-shadow: 3px 2px 10px 5px #888888;
+  width: 50%;
+  height: 440px;
+  float: left;
 }
 
-.DoughnutChart{
-    width: 80%;
-    position: relative;
-    @include mix.create_flexbox($justify: center);
+.DoughnutChart {
+  width: 100%;
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  position: relative;
+  @include mix.create_flexbox($justify: center);
+
+  @media (min-width: 768px) {
+    width: 100%;
+  }
 }
