--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,17 +9,6 @@
 @forward './components/doughnutChart';
 @forward './components/chatTextAI';
 @forward './components/loginRegister';
-
-.col1{
-    width: 70%;
-    float: left;
-}
-
-.col2{
-    width: 30%;
-    float: left;
-}
-
-.box2{
-    margin-top: 80px;
-}
+@forward './components/mainColumns';
+@forward './components/group';
+@forward './components/progressBar';
