--- a/src/styles/components/_loginRegister.scss
+++ b/src/styles/components/_loginRegister.scss
@@ -20,7 +20,7 @@
       margin-top: 0.5rem;
       padding: 0.5rem;
       border-radius: 0.25rem;
-      border: 1px solid col.$grey;
+      border: 1px solid col.$mid;
     }
 
     button {
