--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,6 +9,6 @@
 @forward './components/doughnutChart';
 @forward './components/chatTextAI';
 @forward './components/loginRegister';
-@forward './components/mainColumns';
 @forward './components/group';
 @forward './components/progressBar';
+@forward './components/estadisticasPrincipal';
