--- a/src/styles/abstracts/_colors.scss
+++ b/src/styles/abstracts/_colors.scss
@@ -1,14 +1,13 @@
-$main: #04524B;
-$mid: #379E96;
-$secondary: #9E3400;
-$light: #0AD1C1;
+$main: #333333;
+$mid: #C4C4C4;
+$secondary: #7F8DFF;
+$light: #C9D4FF;
 $white: #f5f5f5;
-$black: #001e24;
-$grey: #C4C4C4;
-$dark: #033834;
-$red: #D1261F;
+$black: #000202;
+$red: #df3e23;
+$orange: #FF7F7F;
 $purple: #520C49;
 $yellow: #9E8000;
-$green: #00521D;
-$blue: #145285;
-$blue-light: #538AB8;
+$green: #63c74d;
+$blue: #285cc4;
+$blue-light: #249fde;
