--- a/src/styles/components/_cardSlider.scss
+++ b/src/styles/components/_cardSlider.scss
@@ -4,7 +4,7 @@
 
 .slider{
     width: 100%;
-    height: 305px;
+    height: 200px;
     position: relative;
     @include mix.create_flexbox;
     margin: 15px 0 15px 0;
@@ -47,16 +47,32 @@
 
         &__card{
             width: 320px;
-            height: 300px;
-            background: col.$light;
+            height: 200px;
+            background: col.$orange;
             border-radius: 20px;
             display: inline-block;
             margin: 5px 5px;
             box-shadow: 2px 2px 2px 2px rgb(0 0 0 / 12%);
             cursor: pointer;
 
+            &-image{
+                width: 100%;
+                height: 220px;
+                //background-color: rgb(240 240 240 / 80%);
+                // background: col.$mid;
+                border-top-left-radius: 10px;
+                border-top-right-radius: 10px;
+
+                img{
+                    padding: 30px;
+                    width: 150px;
+                    height: 150px;
+                }
+            }
+
             &-title, &-description{
                 margin: 5px 0px 5px 10px;
+                background-color: aqua;
             }
             
             &-title{
@@ -67,15 +83,6 @@
             &-description{
                 opacity: 0.5;
                 font-size: 13px;  
-            }
-            
-            &-image{
-                width: 100%;
-                height: 220px;
-                //background-color: rgb(240 240 240 / 80%);
-                background: col.$grey;
-                border-top-left-radius: 10px;
-                border-top-right-radius: 10px;
             }
         }
     }
