--- a/src/styles/components/_doughnutChart.scss
+++ b/src/styles/components/_doughnutChart.scss
@@ -1,17 +1,17 @@
 @use "../abstracts/mixins" as mix;
+@use "../abstracts/colors" as col;
 
 .chartBox {
   box-shadow: 3px 2px 10px 5px #888888;
-  width: 50%;
-  height: 440px;
+  @include mix.set_dimensions(30%, 440px);
   float: left;
+  background-color: col.$main;
+  border-radius: 10px;
 }
 
 .DoughnutChart {
-  width: 100%;
-  width: 100%;
+  @include mix.set_dimensions(100%, 100%);
   max-width: 100%;
-  height: 100%;
   position: relative;
   @include mix.create_flexbox($justify: center);
 
