--- a/src/styles/components/_estadisticasPrincipal.scss
+++ b/src/styles/components/_estadisticasPrincipal.scss
@@ -6,6 +6,12 @@
   background-color: col.$white;
   float: left;
 
+  @media (max-width: 768px) {
+    width: 100%;
+    float: none;
+    margin-bottom: 20px;
+  }
+
   &__content {
     width: 100%;
     height: 100%;
