--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,19 +1,79 @@
-@use '../abstracts/colors' as col;
-@use '../abstracts/mixins' as mix;
+@use "../abstracts/colors" as col;
+@use "../abstracts/mixins" as mix;
 
-.nav{
-    background-color: col.$main;
-    &__container{
-        width: 90%;
-        margin: 0 auto;
-        height: 100px;
-        @include mix.create_flexbox($justify: space-evenly);
-    }
-    &__item{
-        color: col.$white;
+.nav {
+  background-color: col.$main;
 
-        &:hover{
-            color: col.$yellow;
-        }
+  &__container {
+    width: 90%;
+    margin: 0 auto;
+    height: 100px;
+    @include mix.create_flexbox($justify: space-between);
+  }
+
+  @media (max-width: 768px) {
+    &__menu-toggle {
+      display: block;
+    //   font-size: 2rem;
+      color: col.$white;
+      background: none;
+      border: none;
+      cursor: pointer;
+      
+    //   position: absolute;
+      top: 20px;
+      right: 20px;
+      z-index: 9999;
+
+      &:focus {
+        outline: none;
+      }
     }
+
+    &__container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 20px;
+    }
+
+    &__menu {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 80%;
+      height: 100vh;
+      background-color: col.$main;
+      color: col.$white;
+      transform: translateX(-100%);
+      transition: transform 0.3s ease;
+      z-index: 9999; // Establece un valor alto para que aparezca por encima de otros elementos
+
+      &.open {
+        transform: translateX(0);
+      }
+    }
+  }
+
+  @media (min-width: 769px) {
+    &__container {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    &__item {
+      display: inline-block; /* Cambia el display a inline-block */
+      margin-left: 1rem; /* Añade un margen izquierdo entre elementos */
+    }
+  }
+
+  &__item {
+    color: col.$white;
+    padding: 1rem;
+
+    &:hover {
+      color: col.$yellow;
+    }
+  }
 }
