--- a/src/styles/components/_group.scss
+++ b/src/styles/components/_group.scss
@@ -1,6 +1,29 @@
-.groupBox{
+.groupBox {
     width: 47%;
     float: left;
     margin: 20px;
     background-color: aqua;
+}
+
+.TaskSelection {
+    width: 100%;
+    // height: 100%;
+    position: relative;
+    background: #C9D4FF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25) inset;
+
+    &__item {
+        float: left;
+        width: 362px;
+        height: auto;
+        position: relative;
+        background: #42A865;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25) inset;
+        border-radius: 15px;
+        overflow: hidden;
+        justify-content: center;
+        align-items: center;
+        gap: 7px;
+        display: inline-flex;
+    }
 }
