--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,3 +12,4 @@
 @forward './components/group';
 @forward './components/progressBar';
 @forward './components/estadisticasPrincipal';
+@forward './components/taskForm'
